[package]
name = "rnt"
version = "0.1.0"
edition = "2021"
authors = ["Sylvia Waldron"]
license = "GPL-3.0-or-later"
description = "A CLI classic Doom launcher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive", "cargo"] }
